Formatting changes and icons

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,23 +1,12 @@
-.App {
+div.App {
   text-align: center;
-  height: 100vh;
-  width: 100vw;
   display: grid;
+  height: 100vh;
   grid-template-rows: 12vh 1fr 5vh;
   grid-template-columns: 20vw 2fr;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 5vh;
-}
-
-.App-intro {
-  font-size: large;
-}
-
 article {
-  grid-row: 2/-1;
-  grid-column: 2/-1;
-  min-width: 300px;
+  grid-row: 2/-2;
+  grid-column: 2/3;
 }
