--- a/src/Item/Item.css
+++ b/src/Item/Item.css
@@ -1,19 +1,16 @@
 
 .item {
   display: grid;
-  grid-template-columns: 1fr 4fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-column: span 1;
+  grid-row: span 1;
+  grid-template-columns: 3em auto 3fr;
+  grid-template-rows: auto;
   text-align: left;
-  border: 1px solid lightblue;
-  grid-gap: 0.25em 1em;
-}
-
-.item .label {
-  grid-column: 1/2;
-}
-
-.item .data {
-  grid-column: 2/3;
+  margin: 1vmin;
+  box-shadow: 0px 2px 3px lightgray;
+  padding: 2px;
+  grid-gap: 4px 10px;
+  align-items: center;
 }
 
 .item-movie {
@@ -21,5 +18,13 @@
 }
 
 .item-book {
-  background-color: #fff9f8;
+  background-color: #fffff8;
+}
+
+.item-icon {
+  margin-left: 0.5em;
+  width: 2em;
+  height: 2em;
+  grid-column: 1;
+  grid-row: 1/4;
 }
