--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -1,15 +1,15 @@
 .App-header {
   background-color: #555;
-  padding: 1vh;
+  padding: 0.5vh;
   color: #fffafc;
   grid-column: span 2;
 }
 
-.App-header h2 {
-  font-size: 2.5vh;
+.App-header h3 {
+  font-size: 2.25vh;
+  margin: 0.25vh;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.App-logo {
+  height: 6vh;
 }
