refactor filter handling, implement Remove Item

--- a/src/Item/Item.css
+++ b/src/Item/Item.css
@@ -9,7 +9,7 @@
   margin: 1vmin;
   box-shadow: 0px 2px 3px lightgray;
   padding: 2px;
-  grid-gap: 4px 10px;
+  grid-gap: 7px 10px;
   align-items: center;
 }
 
@@ -26,5 +26,24 @@
   width: 2em;
   height: 2em;
   grid-column: 1;
-  grid-row: 1/4;
+  grid-row: 1/span 2;
+}
+
+.item-remove {
+  font-size: 14px;
+  color: darkred;
+  grid-column: 1/span 1;
+  grid-row: 3/span 1;
+  text-align: center;
+}
+.item-remove p {
+  margin: 8px;
+  margin-top: -1px;
+}
+
+.item .label {
+  grid-column: 2/3;
+}
+.item .data {
+  grid-column: 3/-1;
 }
