--- a/src/App/App.css
+++ b/src/App/App.css
@@ -2,12 +2,23 @@ div.App {
   text-align: center;
   display: grid;
   height: 100vh;
-  grid-template-rows: 12vh 83vh 5vh;
-  grid-template-columns: 20vw 2fr;
 }
 
-article {
-  grid-row: 2/-2;
-  grid-column: 2/3;
-  overflow: scroll;
+@media only screen and (min-width: 600px) {
+  div.App {
+    grid-template-rows: 12vh 83vh 5vh;
+    grid-template-columns: 220px 2fr;
+  }
+  article {
+    grid-row: 2/-2;
+    grid-column: 2/3;
+    overflow: scroll;
+  }
+
+}
+@media only screen and (max-width: 599.9px) {
+  div.App {
+    grid-template-rows: 10vh 1fr 2fr 4vh;
+    grid-template-columns: 1fr;
+  }
 }
