--- a/src/Item/Item.css
+++ b/src/Item/Item.css
@@ -13,6 +13,11 @@
   align-items: center;
 }
 
+.item:hover {
+  box-shadow: 2px 4px 5px gray;
+  transition: box-shadow 100ms;
+}
+
 .item-movie {
   background-color: #f4feea;
 }
