--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -2,7 +2,7 @@
   background-color: #555;
   padding: 0.5vh;
   color: #fffafc;
-  grid-column: span 2;
+  grid-column: 1/-1;
 }
 
 .App-header h3 {
